--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,3 +20,41 @@ jobs:
           port: 22
           source: "docker-compose.yml"
           target: "/home/lev/project"
+
+  build-and-push:
+    name: build api by maven, build docker images, push to hub
+    runs-on: ubuntu-latest
+    needs: push-compose
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: set up jdk 8
+        uses: actions/setup-java@v3
+        with:
+          java-version: '8'
+          distribution: 'adopt-openj9'
+
+      - name: build by maven
+        run: mvn clean package
+
+      - name: build docker images
+        run: |
+          # api
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/docker-spring-boot-postgres:latest .
+          
+          # frontend
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/frontend-http-server:latest ./frontend
+
+      - name: log in docker hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: push docker images to docker hub
+        run: |
+          # push api image
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/docker-spring-boot-postgres:latest
+          
+          # push frontend image
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/frontend-http-server:latest
