--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,3 +58,35 @@ jobs:
           
           # push frontend image
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/frontend-http-server:latest
+
+  deploy:
+    name: deploy to server
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    if: success()
+    steps:
+      - name: connect to server and deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: "194.87.94.5"
+          username: "lev"
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          script: |
+            echo DB_USERNAME = ${{ secrets.POSTGRES_USERNAME }} >> pre-project-3-env.txt
+            echo DB_PASSWORD = ${{ secrets.POSTGRES_PASSWORD }} >> pre-project-3-env.txt
+            
+            docker stop frontend
+            docker stop app
+            
+            docker rm frontend
+            docker rm app
+            
+            docker rmi ${{ secrets.DOCKER_HUB_USERNAME }}/docker-spring-boot-postgres
+            docker rmi ${{ secrets.DOCKER_HUB_USERNAME }}/frontend-http-server
+            
+            cd project
+            
+            docker-compose up --env-file=pre-project-3-env.txt -d 
+            docker ps -a
+            
