add liquibase dep to pom, add liquibase to application.yml, ad db.changelog-master.xml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,8 @@ spring:
       hibernate:
         enable_lazy_load_no_trans: true
         format_sql: true
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.xml
 
 token:
   signing:
