--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,14 @@
             <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.3.15</version>
+            <scope>compile</scope>
+        </dependency>
+
 
     </dependencies>
 
