--- a/bot/src/main/resources/application.yml
+++ b/bot/src/main/resources/application.yml
@@ -1,3 +1,20 @@
 bot:
   token: ${BOT_TOKEN}
   name: car_price_tracking_bot
+
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/avito_bot_database
+    username: postgres
+    password: agroycg592:ggg
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: false
+    properties:
+      hibernate:
+        enable_lazy_load_no_trans: true
+        format_sql: true
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.xml
