--- a/bot/src/main/resources/application.yml
+++ b/bot/src/main/resources/application.yml
@@ -18,3 +18,6 @@ spring:
         format_sql: true
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.xml
+
+server:
+  port: 8081
