--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -71,6 +71,12 @@
             <version>6.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>dto</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 </project>
