--- a/bot/src/main/resources/application.yml
+++ b/bot/src/main/resources/application.yml
@@ -28,3 +28,4 @@ api:
     sign-in: http://localhost:8080/auth/signin
     refresh: http://localhost:8080/auth/refresh
     get-car-positions: http://localhost:8080/cars
+    get-profile: http://localhost:8080/user
