--- a/bot/src/main/resources/application.yml
+++ b/bot/src/main/resources/application.yml
@@ -27,5 +27,7 @@ api:
   url:
     sign-in: http://localhost:8080/auth/signin
     refresh: http://localhost:8080/auth/refresh
-    get-car-positions: http://localhost:8080/cars
     get-profile: http://localhost:8080/user
+    get-car-positions: http://localhost:8080/cars
+    get-brands: http://localhost:8080/brands
+    get-models: http://localhost:8080/models
