--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -77,6 +77,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.knowm.xchart</groupId>
+            <artifactId>xchart</artifactId>
+            <version>3.8.8</version>
+        </dependency>
     </dependencies>
 
 </project>
