--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -82,6 +82,13 @@
             <artifactId>xchart</artifactId>
             <version>3.8.8</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.10.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
