--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,25 +22,28 @@ jobs:
           target: "/home/lev/project"
 
   build-and-push:
-    name: build api by maven, build docker images, push to hub
+    name: build bot by maven, build docker images, push to hub
     runs-on: ubuntu-latest
     needs: push-compose
     steps:
       - uses: actions/checkout@v3
 
-      - name: set up jdk 8
+      - name: set up jdk 20
         uses: actions/setup-java@v3
         with:
-          java-version: '8'
-          distribution: 'adopt-openj9'
+          java-version: '20'
+          distribution: 'adopt-openj20'
 
       - name: build by maven
-        run: mvn clean package
+        run: |
+          cd bot
+          mvn clean package
+          cd ..
 
       - name: build docker images
         run: |
           # api
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/docker-spring-boot-postgres:latest .
+          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/avito-bot:latest ./bot
           
           # frontend
           docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/frontend-http-server:latest ./frontend
@@ -54,7 +57,7 @@ jobs:
       - name: push docker images to docker hub
         run: |
           # push api image
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/docker-spring-boot-postgres:latest
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/avito-bot:latest
           
           # push frontend image
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/frontend-http-server:latest
@@ -78,12 +81,12 @@ jobs:
             echo DB_PASSWORD = ${{ secrets.POSTGRES_PASSWORD }} >> .env
             
             docker stop frontend
-            docker stop app
+            docker stop bot
             
             docker rm frontend
-            docker rm app
+            docker rm bor
             
-            docker rmi ${{ secrets.DOCKER_HUB_USERNAME }}/docker-spring-boot-postgres
+            docker rmi ${{ secrets.DOCKER_HUB_USERNAME }}/avito-bot
             docker rmi ${{ secrets.DOCKER_HUB_USERNAME }}/frontend-http-server
   
             docker-compose up -d 
