сборка модуля dto перед сборкой бота

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,9 @@ jobs:
 
       - name: build by maven
         run: |
-          cd bot
+          cd dto
+          mvn clean install
+          cd ../bot
           mvn clean package
           cd ..
 
