--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,3 +1,3 @@
 FROM adoptopenjdk:11-jre-hotspot
 COPY target/*.jar /application.jar
-ENTRYPOINT ["java", "-jar", "application.jar"]
+ENTRYPOINT ["java", "-jar", "bot-1.0-SNAPSHOT.jar"]
