--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,3 +1,3 @@
-FROM adoptopenjdk:11-jre-hotspot
+FROM openjdk:20-jdk-alpine
 COPY target/*.jar /application.jar
 ENTRYPOINT ["java", "-jar", "application.jar"]
