--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,3 +1,3 @@
-FROM openjdk:20-jdk-alpine
+FROM eclipse-temurin:21-jdk-alpine
 COPY target/*.jar /application.jar
 ENTRYPOINT ["java", "-jar", "application.jar"]
