--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,11 +28,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: set up jdk 20
+      - name: set up jdk 11
         uses: actions/setup-java@v3
         with:
-          java-version: '20'
-          distribution: 'adopt-openj20'
+          java-version: '11'
+          distribution: 'adopt-openj11'
 
       - name: build by maven
         run: |
@@ -84,7 +84,7 @@ jobs:
             docker stop bot
             
             docker rm frontend
-            docker rm bor
+            docker rm bot
             
             docker rmi ${{ secrets.DOCKER_HUB_USERNAME }}/avito-bot
             docker rmi ${{ secrets.DOCKER_HUB_USERNAME }}/frontend-http-server
