--- a/bot/src/main/resources/application.yml
+++ b/bot/src/main/resources/application.yml
@@ -25,14 +25,13 @@ server:
 
 api:
   url:
-    sign-in: http://localhost:8080/auth/signin
-    refresh: http://localhost:8080/auth/refresh
-    get-profile: http://localhost:8080/user
-    get-car-positions: http://localhost:8080/cars
-    get-car-position: http://localhost:8080/cars/
-    create-car-position: http://localhost:8080/cars
-    get-brands: http://localhost:8080/brands
-    get-models: http://localhost:8080/models
+    base-url: http://localhost:8080
+    sign-in: /auth/signin
+    refresh: /auth/refresh
+    get-profile: /user
+    car-positions: /cars
+    get-car-brands: /brands
+    get-car-models: /models
   constraint:
     min-year-from: 1900
     max-mileage: 5000000
