--- a/bot/src/main/resources/application.yml
+++ b/bot/src/main/resources/application.yml
@@ -25,7 +25,7 @@ server:
 
 api:
   url:
-    base-url: http://localhost:8080
+    base-url: https://2dfa-185-223-93-175.ngrok-free.app
     sign-in: /auth/signin
     refresh: /auth/refresh
     get-profile: /user
