--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,17 @@
-FROM node:18-alpine
-WORKDIR /app
-COPY . .
-RUN npm install -g http-server
-EXPOSE 3000
-CMD ["http-server", "-p", "3000", "--cors", "*"]
+#FROM node:18-alpine
+#WORKDIR /app
+#COPY ../../../.. .
+#RUN npm install -g http-server
+#EXPOSE 3000
+#CMD ["http-server", "-p", "3000", "--cors", "*"]
+
+FROM nginx:alpine
+COPY nginx.conf /etc/nginx/nginx.conf
+
+COPY ./pages /usr/share/nginx/html
+
+RUN mkdir -p /etc/nginx/ssl
+
+EXPOSE 80 443
+
+CMD ["nginx", "-g", "daemon off;"]
