--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,10 +4,20 @@ http {
     server {
         listen 80;
         server_name bahertylop.ru;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name bahertylop.ru;
+
+        ssl_certificate /etc/letsencrypt/live/bahertylop.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/bahertylop.ru/privkey.pem;
 
         location / {
             root /usr/share/nginx/html;
             index home.html;
+            try_files $uri /home.html;
         }
     }
 }
