--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,7 +11,7 @@ RUN apk add --no-cache certbot certbot-nginx
 
 COPY nginx.conf /etc/nginx/nginx.conf
 
-RUN certbot certonly --standalone --agree-tos --email your-email@example.com -d bahertylop.ru
+RUN certbot certonly --standalone --agree-tos --email levka288@gmail.com -d bahertylop.ru
 
 COPY ./pages /usr/share/nginx/html
 
