отредачил docker nginx

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,8 +11,8 @@ http {
         listen 443 ssl;
         server_name bahertylop.ru;
 
-        ssl_certificate /etc/letsencrypt/live/bahertylop.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/bahertylop.ru/privkey.pem;
+#         ssl_certificate /etc/letsencrypt/live/bahertylop.ru/fullchain.pem;
+#         ssl_certificate_key /etc/letsencrypt/live/bahertylop.ru/privkey.pem;
 
         location / {
             root /usr/share/nginx/html;
