--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,22 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    volumes:
+      - certbot-certs:/etc/nginx/certs # Том для сертификатов
+    depends_on:
+      - certbot
+
+  certbot:
+    image: certbot/certbot:latest
+    container_name: certbot
+    volumes:
+      - certbot-certs:/etc/letsencrypt
+    command: certonly --webroot --webroot-path=/var/www/certbot --email your-email@example.com --agree-tos --no-eff-email -d bahertylop.ru
+    depends_on:
+      - nginx
+
+volumes:
+  certbot-certs:
 #    volumes:
 #      - ./ssl:/etc/nginx/ssl
 #      - ./frontend/pages:/usr/share/nginx/html
