--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,13 +7,10 @@
 
 FROM nginx:alpine
 
-RUN apk add --no-cache certbot certbot-nginx
-
 COPY nginx.conf /etc/nginx/nginx.conf
-
-#RUN certbot certonly --standalone --agree-tos --email levka288@gmail.com -d bahertylop.ru
-
 COPY ./pages /usr/share/nginx/html
+
+RUN mkdir -p /var/www/certbot
 
 EXPOSE 80 443
 
