--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,6 +88,8 @@ jobs:
             docker rmi ${{ secrets.DOCKER_HUB_USERNAME }}/avito-bot
             docker rmi ${{ secrets.DOCKER_HUB_USERNAME }}/nginx-frontend
   
-            docker-compose up -d 
+            docker-compose up nginx-frontend --build -d 
+            docker-compose up certbot --build -d
+            docker-compose up bot -d
             docker ps -a
             
