--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,5 +9,9 @@ http {
             root /usr/share/nginx/html;
             index home.html;
         }
+
+        location /.well-known {
+            proxy_pass http://194.87.94.5:6000;
+        }
     }
 }
