--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,9 +30,27 @@ services:
     build:
       context: ./frontend
     container_name: nginx-frontend
+    volumes:
+      - ./frontend/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./frontend/cert.pem:/etc/cert.pem
+      - ./frontend/key.pem:/etc/key.pem
     ports:
       - "80:80"
       - "443:443"
+
+  certbot:
+    ports:
+      - "6000:80"
+    # и снова мониторуем директорию nginx
+    volumes:
+      - ./frontend/:/etc/nginx/
+    build:
+      context: ./frontend/certbot
+      dockerfile: Dockerfile
+      # задаем переменные среды
+      args:
+        DOMAIN_EMAIL: levka288@gmail.com
+        DOMAIN_URL: bahetylop.ru
 #    volumes:
 #      - ./ssl:/etc/nginx/ssl
 #      - ./frontend/pages:/usr/share/nginx/html
