--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,16 +2,22 @@ events {}
 
 http {
     server {
-        listen 80;
+         listen 80;
+         server_name bahertylop.ru;
+
+         return 301 https://$host$request_uri;
+     }
+
+    server {
+        listen 443 ssl;
         server_name bahertylop.ru;
+
+        ssl_certificate /etc/nginx/ssl.crt;
+        ssl_certificate_key /etc/nginx/ssl.key;
 
         location / {
             root /usr/share/nginx/html;
             index home.html;
-        }
-
-        location /.well-known {
-            proxy_pass http://194.87.94.5:6000;
         }
     }
 }
