--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,6 +11,10 @@ COPY nginx.conf /etc/nginx/nginx.conf
 
 COPY ./pages /usr/share/nginx/html
 
+COPY ./mydomain.key /etc/nginx/ssl.key
+
+COPY ./mydomain.crt /etc/nginx/ssl.crt
+
 EXPOSE 80 443
 
 CMD ["nginx", "-g", "daemon off;"]
