указал страницы в nginx

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -15,9 +15,11 @@ http {
         ssl_certificate /etc/nginx/ssl.crt;
         ssl_certificate_key /etc/nginx/ssl.key;
 
+        root /usr/share/nginx/html;
+        index home.html;
+
         location / {
-            root /usr/share/nginx/html;
-            index home.html;
+            try_files $uri $uri/ =404;
         }
     }
 }
