--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -19,7 +19,7 @@ http {
         index home.html;
 
         location / {
-            try_files $uri $uri/ =404;
+            try_files $uri $uri.html $uri/ =404;
         }
     }
 }
